Fixed bleed image safari issue

--- a/site/web/app/themes/host/assets/sass/components/_location-related-buildings.scss
+++ b/site/web/app/themes/host/assets/sass/components/_location-related-buildings.scss
@@ -34,6 +34,7 @@
 // .related-building-aside {}
 
 .related-building-aside-image {
+    display: flex;
     min-height: 40vh;
 }
 
